fixed the filtering classes in the upcoming classes mobile and removed the keep track text for alignemnt issue in mobile screen

--- a/src/Development/pages/private/Dashboard/UpcomingSessions/Streak.css
+++ b/src/Development/pages/private/Dashboard/UpcomingSessions/Streak.css
@@ -23,7 +23,7 @@
     font-size: 18px;
   }
   .stkm {
-    font-size: 20px;
+    display: none;
   }
 }
 @media (max-width: 610px) {
